# mdiss

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DONE.md  Makefile  README.md  ROADMAP.md  TODO.md  install.sh  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  src.txt  todo.sh  update_python.sh
.github/workflows/: ci.yml  release.yml
docs/: api.md  gitlab_integration.md  index.md  installation.md  llm_integration.md  usage.md
examples/: README.md  advanced_usage.py  basic_usage.py  local_llm_ticket_generation.py
mdiss/: __init__.py  analyzer.py  cli.py  github_client.py  models.py  parser.py  ticket_manager.py
mdiss/ai/: ticket_generator.py
mdiss/clients/: __init__.py  gitlab_client.py
mdiss/integrations/: __init__.py  github_integration.py  gitlab_integration.py
mdiss/notification/: slack.py
mdiss/parser/: README.md  __init__.py  base_parser.py  exceptions.py  main.py  main.py.bak  markdown_processor.py
mdiss/parser/handlers/: __init__.py  base_handler.py  code_block_parser.py  todo_format.py
mdiss/parser/models/: __init__.py
mdiss/parser/parsers/: __init__.py  base_parser.py  command_parser.py  markdown_parser.py
mdiss/parser/parsers/models/: __init__.py
mdiss/parser/utils/: __init__.py
mdiss/parsers/: __init__.py  json_parser.py  xml_parser.py
scripts/: enhance_ticket.py  test_enhance_ticket.sh  update_github_issue.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli.py  test_github_client.py  test_parser.py  test_refactored_parser.py
tests/fixtures/: sample_markdown.md  sample_responses.json
